--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -9,6 +9,7 @@ server.ssl.key-alias=openvidu-selfsigned
 logging.level.root=info
 spring.main.allow-bean-definition-overriding=true
 
+certificate.type=selfsigned
 kms.uris=["ws://localhost:8888/kurento"]
 
 openvidu.publicurl=local
