--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
@@ -1,9 +1,22 @@
+# ------------------------------------------------------------------------------
+#
+#    DO NOT MODIFY THIS FILE !!!
+#
+#    Configuration properties should be specified in .env file
+#
+#    Application based on OpenVidu should be specified in 
+#    docker-compose.override.yml file
+#
+#    This docker-compose file coordinates all services of OpenVidu CE Plarform. 
+#
+#    This file will be overridden when update OpenVidu Platform
+#
+# ------------------------------------------------------------------------------
+
 version: '3.1'
 
 services:
-    # In this docker-compose are deployed the Openvidu services.
-    # This file not necessary change, you only need change 
-    # the .env file with the necessaries variables.
+
     openvidu-server:
         image: openvidu/openvidu-server:2.13.0-beta2
         restart: on-failure
