--- a/openvidu-node-client/package.json
+++ b/openvidu-node-client/package.json
@@ -1,13 +1,13 @@
 {
     "author": "OpenVidu",
     "dependencies": {
-        "axios": "0.19.0",
-        "buffer": "5.4.3"
+        "axios": "0.19.2",
+        "buffer": "5.5.0"
     },
     "description": "OpenVidu Node Client",
     "devDependencies": {
-        "@types/node": "12.12.14",
-        "grunt": "1.0.4",
+        "@types/node": "13.11.0",
+        "grunt": "1.1.0",
         "grunt-cli": "1.3.2",
         "grunt-contrib-copy": "1.0.0",
         "grunt-contrib-sass": "1.0.0",
@@ -16,10 +16,10 @@
         "grunt-postcss": "0.9.0",
         "grunt-string-replace": "1.3.1",
         "grunt-ts": "6.0.0-beta.22",
-        "ts-node": "8.5.4",
-        "tslint": "5.20.1",
-        "typedoc": "0.15.6",
-        "typescript": "3.7.4"
+        "ts-node": "8.8.2",
+        "tslint": "6.1.1",
+        "typedoc": "0.17.3",
+        "typescript": "3.8.3"
     },
     "license": "Apache-2.0",
     "main": "lib/index.js",
@@ -30,7 +30,7 @@
     },
     "scripts": {
         "build": "./node_modules/typescript/bin/tsc",
-        "docs": "./node_modules/typedoc/bin/typedoc --options ./config/typedoc.js --out ./docs ./src && rm -rf ../../openvidu.io-docs/docs/api/openvidu-node-client/* && cp -R ./docs/. ../../openvidu.io-docs/docs/api/openvidu-node-client"
+        "docs": "./node_modules/typedoc/bin/typedoc --options ./config/typedoc.js ./src && rm -rf ../../openvidu.io-docs/docs/api/openvidu-node-client/* && cp -R ./docs/. ../../openvidu.io-docs/docs/api/openvidu-node-client"
     },
     "typings": "lib/index.d.ts",
     "version": "2.12.0"
