--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -2,28 +2,34 @@
 # ----------------------
 # Documentation: https://openvidu.io/docs/reference-docs/openvidu-server-params/
 
+# NOTE: This file doesn't need to quote assignment values, like most shells do.
+# All values are stored as-is, even if they contain spaces, so don't quote them.
+
+
+
 # OpenVidu SECRET used for apps to connect to OpenVidu server and users to access to OpenVidu Dashboard
 OPENVIDU_SECRET=
 
-# Domain name. If you do not have one, the public IP of the machine. For example 212.4.34.1 or openvidu.example.com. 
+# Domain name. If you do not have one, the public IP of the machine.
+# For example: 198.51.100.1, or openvidu.example.com
 OPENVIDU_DOMAIN_OR_PUBLIC_IP=
 
-# Openvidu Folder Record used for save the openvidu recording videos. Change it 
+# Openvidu Folder Record used for save the openvidu recording videos. Change it
 # with the folder you want to use from your host.
 OPENVIDU_RECORDING_FOLDER=/opt/recordings
 
-# Certificate type: 
-# - selfsigned:  Self signed certificate. Not recommended for production use.  
+# Certificate type:
+# - selfsigned:  Self signed certificate. Not recommended for production use.
 #                Users will see an ERROR when connected to web page.
 # - owncert:     Valid certificate purchased in a Internet services company.
 #                Please put the certificates in same folder as docker-compose.yml
 #                file with names certificate.key and certificate.cert.
-# - letsencrypt: Generate a new certificate using letsencrypt. Please set the 
-#                required contact email for Let's Encrypt in LETSENCRYPT_EMAIL 
+# - letsencrypt: Generate a new certificate using letsencrypt. Please set the
+#                required contact email for Let's Encrypt in LETSENCRYPT_EMAIL
 #                variable.
 CERTIFICATE_TYPE=selfsigned
 
-# If CERTIFICATE_TYPE=letsencrypt, you need to configure a valid email for 
+# If CERTIFICATE_TYPE=letsencrypt, you need to configure a valid email for
 # notifications
 LETSENCRYPT_EMAIL=user@example.com
 
@@ -31,11 +37,11 @@ LETSENCRYPT_EMAIL=user@example.com
 # --------------------------
 # Docker hub kurento media server: https://hub.docker.com/r/kurento/kurento-media-server-dev
 # Uncomment the next line and define this variable with KMS image that you want use
-# KMS_IMAGE=kurento-media-server-dev:6.13
+# KMS_IMAGE=kurento/kurento-media-server-dev:6.13
 
 # Kurento Media Server Level logs
 # -------------------------------
-# Uncomment the next line and define this variable to change 
+# Uncomment the next line and define this variable to change
 # the verbosity level of the logs of KMS
 # Documentation: https://doc-kurento.readthedocs.io/en/stable/features/logging.html
 # KMS_DEBUG_LEVEL=3,Kurento*:4,kms*:4,sdp*:4,webrtc*:4,*rtpendpoint:4,rtp*handler:4,rtpsynchronizer:4,agnosticbin:4
@@ -45,4 +51,4 @@ LETSENCRYPT_EMAIL=user@example.com
 # Uncomment the next line and define this variable to change
 # the verbosity level of the logs of Openvidu Service
 # RECOMENDED VALUES: INFO for normal logs DEBUG for more verbose logs
-# OV_CE_DEBUG_LEVEL=INFO 
+# OV_CE_DEBUG_LEVEL=INFO
