--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
@@ -4,10 +4,10 @@
 #
 #    Configuration properties should be specified in .env file
 #
-#    Application based on OpenVidu should be specified in 
+#    Application based on OpenVidu should be specified in
 #    docker-compose.override.yml file
 #
-#    This docker-compose file coordinates all services of OpenVidu CE Plarform. 
+#    This docker-compose file coordinates all services of OpenVidu CE Plarform.
 #
 #    This file will be overridden when update OpenVidu Platform
 #
@@ -24,7 +24,7 @@ services:
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
             - ${OPENVIDU_RECORDING_FOLDER}:${OPENVIDU_RECORDING_FOLDER}
-        env_file: 
+        env_file:
             - .env
         environment:
             - SERVER_SSL_ENABLED=false
@@ -39,7 +39,7 @@ services:
             - LOGGING_LEVEL_ROOT=${OV_CE_DEBUG_LEVEL:-INFO}
 
     kms:
-        image: kurento/${KMS_IMAGE:-kurento-media-server-dev:6.13}
+        image: ${KMS_IMAGE:-kurento/kurento-media-server-dev:6.13}
         restart: on-failure
         network_mode: host
         ulimits:
@@ -48,7 +48,7 @@ services:
             - KMS_EXTERNAL_ADDRESS=auto
             - KMS_MIN_PORT=40000
             - KMS_MAX_PORT=57000
-            - GST_DEBUG=${KMS_DEBUG_LEVEL:-3,Kurento*:4,kms*:4,sdp*:4,webrtc*:4,*rtpendpoint:4,rtp*handler:4,rtpsynchronizer:4,agnosticbin:4}
+            - GST_DEBUG=${KMS_DEBUG_LEVEL:-}
 
     redis:
         image: redis:5.0.7
@@ -66,7 +66,7 @@ services:
             - DB_PASSWORD=turn
             - MIN_PORT=57001
             - MAX_PORT=65535
-        
+
     nginx:
         image: openvidu/openvidu-proxy:1.0.0-beta2
         restart: on-failure
@@ -74,7 +74,7 @@ services:
         volumes:
             - ./certificates:/etc/letsencrypt
             - ./owncert:/owncert
-        environment: 
+        environment:
             - DOMAIN_OR_PUBLIC_IP=${OPENVIDU_DOMAIN_OR_PUBLIC_IP}
             - CERTIFICATE_TYPE=${CERTIFICATE_TYPE}
             - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
