--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -15,7 +15,7 @@ node('container') {
           sh 'rm -rf kurento-java || true'
           sh 'rm -rf /opt/openvidu/recordings/* || true'
           sh 'git clone https://github.com/OpenVidu/openvidu.git'
-          sh 'cd openvidu && git checkout $OPENVIDU_COMMIT'
+          sh 'cd openvidu && git fetch origin && git checkout $OPENVIDU_COMMIT'
           sh(script: '''#!/bin/bash
             if $KURENTO_JAVA_SNAPSHOT ; then
             git clone https://github.com/Kurento/kurento-java.git
