Updated proxy image

--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default.conf
@@ -2,10 +2,12 @@ server {
     listen 80;
     server_name {domain_name};
     
+    # Redirect to https
     location / {
         return 301 https://$host$request_uri;
     }    
 
+    # letsencrypt
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
