--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default-app-without-demos.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default-app-without-demos.conf
@@ -1,5 +1,9 @@
-upstream yourapp {
-    server localhost:5442;
+add_header X-Frame-Options SAMEORIGIN;
+add_header X-Content-Type-Options nosniff;
+add_header X-XSS-Protection "1; mode=block";
+
+upstream kibana {
+    server localhost:5601;
 }
 
 upstream openviduserver {
@@ -7,13 +11,41 @@ upstream openviduserver {
 }
 
 server {
-    listen 443 ssl;
+    # Redirect to https
+    if ($host = {domain_name}) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    listen 80 default_server;
+    server_name {domain_name};
+
+    # letsencrypt
+    location /.well-known/acme-challenge {
+        root /var/www/certbot;
+        try_files $uri $uri/ =404;
+    }
+
+    # Kibana panel
+    location /kibana {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        
+        rewrite ^/kibana/(.*)$ /$1 break;
+        proxy_pass http://kibana/;
+    }
+}
+
+server {
+    listen 443 ssl default deferred;
     server_name {domain_name};
 
     ssl_certificate         /etc/letsencrypt/live/{domain_name}/fullchain.pem;
     ssl_certificate_key     /etc/letsencrypt/live/{domain_name}/privkey.pem;
     ssl_trusted_certificate /etc/letsencrypt/live/{domain_name}/fullchain.pem;
-
+    
     ssl_session_cache shared:SSL:50m;
     ssl_session_timeout 5m;
     ssl_stapling on;
@@ -37,12 +69,24 @@ server {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
 
-    # Your App
-    location / {
-        proxy_pass http://yourapp;
+    # Welcome
+    root /var/www/html;
+
+    # Kibana panel
+    location /kibana {
+        auth_basic "Openvidu Monitoring";
+        auth_basic_user_file /etc/nginx/kibana.htpasswd;
+
+        rewrite ^/kibana/(.*)$ /$1 break;
+        proxy_pass http://kibana/;
     }
 
     # Openvidu Server
+    location /layouts/custom {
+        rewrite ^/layouts/custom/(.*)$ /custom-layout/$1 break;
+        root /opt/openvidu;
+    }
+
     location /api {
         proxy_pass http://openviduserver;
     }
@@ -59,8 +103,34 @@ server {
         proxy_pass http://openviduserver;
     }
 
+    location /accept-certificate {
+        proxy_pass http://openviduserver;
+    }
+
     location /dashboard {
         rewrite ^/dashboard/(.*)$ /$1 break;
+        proxy_pass http://openviduserver/;
+    }
+
+    # Openvidu Server Pro
+    location /cdr {
+        proxy_pass http://openviduserver;
+    }
+
+    location /pro {
+        proxy_pass http://openviduserver;
+    }
+
+    location /api-login {
+        proxy_pass http://openviduserver;
+    }
+
+    location /elasticsearch {
+        proxy_pass http://openviduserver;
+    }
+
+    location /inspector {
+        rewrite ^/inspector/(.*)$ /$1 break;
         proxy_pass http://openviduserver/;
     }
 }
