Added java options in docker

--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -135,3 +135,10 @@ OPENVIDU_CDR=false
 # the verbosity level of the logs of Openvidu Service
 # RECOMENDED VALUES: INFO for normal logs DEBUG for more verbose logs
 # OV_CE_DEBUG_LEVEL=INFO
+
+# Java Options
+# --------------------------
+# Uncomment the next line and define this to add
+# options to java command
+# Documentation: https://docs.oracle.com/cd/E37116_01/install.111210/e23737/configuring_jvm.htm#OUDIG00058
+# JAVA_OPTIONS=-Xms2048m -Xmx4096m
