Docker config files unnecessary new line removed

--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -23,8 +23,7 @@ OPENVIDU_SECRET=
 #                variable.
 CERTIFICATE_TYPE=selfsigned
 
-# If CERTIFICATE_TYPE=letsencrypt, you need to configure a valid email for
-# notifications
+# If CERTIFICATE_TYPE=letsencrypt, you need to configure a valid email for notifications
 LETSENCRYPT_EMAIL=user@example.com
 
 # Parameter "openvidu.recording.path"
