--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
@@ -41,6 +41,8 @@ services:
         network_mode: host
         ulimits:
           core: -1
+        volumes:
+            - /core:/core
         environment:
             - KMS_EXTERNAL_ADDRESS=auto
             - KMS_MIN_PORT=40000
