Vars in .env file updated

--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -31,6 +31,10 @@ LETSENCRYPT_EMAIL=user@example.com
 # with the folder you want to use from your host.
 OPENVIDU_RECORDING_PATH=/opt/openvidu/recordings
 
+# Parameter "openvidu.recording.custom-layout"
+# System path where OpenVidu Server should look for custom recording layouts
+OPENVIDU_RECORDING_CUSTOM_LAYOUT=/opt/openvidu/custom-layout
+
 # Parameter "openvidu.recording.public-access"
 # if true any client can connect to
 # https://OPENVIDU_SERVER_IP:OPENVIDU_PORT/recordings/any_session_file.mp4
@@ -38,7 +42,7 @@ OPENVIDU_RECORDING_PATH=/opt/openvidu/recordings
 # openvidu.secret param just as OpenVidu Server dashboard at
 # https://OPENVIDU_SERVER_IP:OPENVIDU_PORT
 # Values: true | false
-OPENVIDU_RECORDING_PUBLIC-ACCESS=false
+OPENVIDU_RECORDING_PUBLIC_ACCESS=false
 
 # Parameter "openvidu.recording.notification"
 # Which users should receive the recording events in the client side
@@ -54,27 +58,27 @@ OPENVIDU_RECORDING_NOTIFICATION=publisher_moderator
 # is being recorded and last user disconnects. If a user publishes within the timeout in either case,
 # the automatic stop of the recording is cancelled
 # 0 means no timeout
-OPENVIDU_RECORDING_AUTOSTOP-TIMEOUT=120
+OPENVIDU_RECORDING_AUTOSTOP_TIMEOUT=120
 
 # Parameter "openvidu.streams.video.max-recv-bandwidth"
 # Maximum video bandwidth sent from clients to OpenVidu Server, in kbps.
 # 0 means unconstrained
-OPENVIDU_STREAMS_VIDEO_MAX-RECV-BANDWIDTH=1000
+OPENVIDU_STREAMS_VIDEO_MAX_RECV_BANDWIDTH=1000
 
 # Parameter "openvidu.streams.video.min-recv-bandwidth"
 # Minimum video bandwidth sent from clients to OpenVidu Server, in kbps.
 # 0 means unconstrained
-OPENVIDU_STREAMS_VIDEO_MIN-RECV-BANDWIDTH=300
+OPENVIDU_STREAMS_VIDEO_MIN_RECV_BANDWIDTH=300
 
 # Parameter "openvidu.streams.video.max-send-bandwidth"
 # Maximum video bandwidth sent from OpenVidu Server to clients, in kbps.
 # 0 means unconstrained
-OPENVIDU_STREAMS_VIDEO_MAX-SEND-BANDWIDTH=1000
+OPENVIDU_STREAMS_VIDEO_MAX_SEND_BANDWIDTH=1000
 
 # Parameter "openvidu.streams.video.min-send-bandwidth"
 # Minimum video bandwidth sent from OpenVidu Server to clients, in kbps.
 # 0 means unconstrained
-OPENVIDU_STREAMS_VIDEO_MIN-SEND-BANDWIDTH=300
+OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 
 # Parameter "openvidu.webhook"
 # true to enable OpenVidu Server Webhook service. false' otherwise
@@ -114,6 +118,10 @@ OPENVIDU_SESSIONS_GARBAGE_THRESHOLD=3600
 # Whether to enable Call Detail Record or not
 # Values: true | false
 OPENVIDU_CDR=false
+
+# Parameter "openvidu.cdr.path"
+# Path where the cdr log file is hosted
+OPENVIDU_CDR_PATH=/opt/openvidu/log
 
 # Kurento Media Server image
 # --------------------------
