Fixed the docker-compose restart

--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
@@ -52,7 +52,7 @@ services:
 
     redis:
         image: redis:5.0.7
-        restart: on-failure
+        restart: always
         network_mode: host
 
     coturn:
