--- a/openvidu-server/src/dashboard/package.json
+++ b/openvidu-server/src/dashboard/package.json
@@ -1,49 +1,49 @@
 {
     "dependencies": {
-        "@angular/animations": "9.0.0",
-        "@angular/cdk": "9.0.0",
-        "@angular/common": "9.0.0",
-        "@angular/compiler": "9.0.0",
-        "@angular/core": "9.0.0",
+        "@angular/animations": "9.1.2",
+        "@angular/cdk": "9.2.1",
+        "@angular/common": "9.1.2",
+        "@angular/compiler": "9.1.2",
+        "@angular/core": "9.1.2",
         "@angular/flex-layout": "9.0.0-beta.29",
-        "@angular/forms": "9.0.0",
-        "@angular/material": "9.0.0",
-        "@angular/platform-browser": "9.0.0",
-        "@angular/platform-browser-dynamic": "9.0.0",
-        "@angular/router": "9.0.0",
-        "core-js": "3.6.4",
-        "jquery": "3.4.1",
+        "@angular/forms": "9.1.2",
+        "@angular/material": "9.2.1",
+        "@angular/platform-browser": "9.1.2",
+        "@angular/platform-browser-dynamic": "9.1.2",
+        "@angular/router": "9.1.2",
+        "core-js": "3.6.5",
+        "jquery": "3.5.0",
         "openvidu-browser": "2.12.0",
-        "rxjs": "6.5.4",
-        "tslib": "1.10.0",
-        "zone.js": "0.10.2"
+        "rxjs": "6.5.5",
+        "tslib": "1.11.1",
+        "zone.js": "0.10.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.900.1",
-        "@angular/cli": "9.0.1",
-        "@angular/compiler-cli": "9.0.0",
-        "@angular/language-service": "9.0.0",
-        "@types/jasmine": "3.5.3",
-        "@types/node": "13.7.0",
-        "codelyzer": "5.2.1",
+        "@angular-devkit/build-angular": "0.901.1",
+        "@angular/cli": "9.1.1",
+        "@angular/compiler-cli": "9.1.2",
+        "@angular/language-service": "9.1.2",
+        "@types/jasmine": "3.5.10",
+        "@types/node": "13.11.1",
+        "codelyzer": "5.2.2",
         "jasmine-core": "3.5.0",
-        "jasmine-spec-reporter": "4.2.1",
-        "karma": "4.4.1",
+        "jasmine-spec-reporter": "5.0.1",
+        "karma": "5.0.1",
         "karma-chrome-launcher": "3.1.0",
         "karma-coverage-istanbul-reporter": "2.1.1",
-        "karma-jasmine": "3.1.0",
-        "karma-jasmine-html-reporter": "1.5.2",
+        "karma-jasmine": "3.1.1",
+        "karma-jasmine-html-reporter": "1.5.3",
         "protractor": "5.4.3",
-        "ts-node": "8.6.2",
-        "tslint": "6.0.0",
-        "typescript": "3.7.5"
+        "ts-node": "8.8.2",
+        "tslint": "6.1.1",
+        "typescript": "3.8.3"
     },
     "license": "Apache-2.0",
     "name": "frontend",
     "private": true,
     "scripts": {
-        "build": "ng build --base-href /dashboard/ --deploy-url /dashboard --output-path ../main/resources/static",
-        "build-prod": "ng build --prod --output-path ../main/resources/static",
+        "build": "ng build --base-href /dashboard/ --output-path ../main/resources/static/dashboard",
+        "build-prod": "ng build --base-href /dashboard/ --prod --output-path ../main/resources/static/dashboard",
         "e2e": "ng e2e",
         "lint": "ng lint",
         "ng": "ng",
