--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default-app.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default-app.conf
@@ -77,7 +77,6 @@ server {
     }
 
     location /dashboard {
-        rewrite ^/dashboard/(.*)$ /$1 break;
-        proxy_pass http://openviduserver/;
+        proxy_pass http://openviduserver;
     }
 }
