--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
@@ -46,6 +46,7 @@ services:
         volumes:
             - /core:/core
         environment:
+            - KMS_EXTERNAL_ADDRESS=auto
             - KMS_MIN_PORT=40000
             - KMS_MAX_PORT=57000
             - GST_DEBUG=${KMS_DEBUG_LEVEL:-}
