NEW SYNTAX FOR CONFIGURATION PROPERTIES

--- a/openvidu-server/src/main/resources/application-docker.properties
+++ b/openvidu-server/src/main/resources/application-docker.properties
@@ -1,25 +1,22 @@
 spring.profiles.active: docker
-
 server.address: 0.0.0.0
-server.ssl.enabled: true
-openvidu.recording.version: 2.9.0
-
-
-
 server.port: 4443
+server.ssl.enabled: true
 server.ssl.key-store: classpath:openvidu-selfsigned.jks
 server.ssl.key-store-password: openvidu
 server.ssl.key-store-type: JKS
 server.ssl.key-alias: openvidu-selfsigned
-kms.uris=["ws://localhost:8888/kurento"]
 
-openvidu.secret: MY_SECRET
-openvidu.publicurl: local
-openvidu.cdr: false
+KMS_URIS=["ws://localhost:8888/kurento"]
 
-openvidu.recording: false
-openvidu.recording.path: /opt/openvidu/recordings
-openvidu.recording.public-access: false
-openvidu.recording.notification: publisher_moderator
-openvidu.recording.custom-layout: /opt/openvidu/custom-layout
-openvidu.recording.autostop-timeout: 120
+OPENVIDU_SECRET: MY_SECRET
+OPENVIDU_PUBLICURL: local
+OPENVIDU_CDR: false
+
+OPENVIDU_RECORDING: false
+OPENVIDU_RECORDING_VERSION: 2.9.0
+OPENVIDU_RECORDING_PATH: /opt/openvidu/recordings
+OPENVIDU_RECORDING_PUBLIC_ACCESS: false
+OPENVIDU_RECORDING_NOTIFICATION: publisher_moderator
+OPENVIDU_RECORDING_CUSTOM_LAYOUT: /opt/openvidu/custom-layout
+OPENVIDU_RECORDING_AUTOSTOP_TIMEOUT: 120
