--- a/openvidu-server/src/test/resources/application.properties
+++ b/openvidu-server/src/test/resources/application.properties
@@ -2,7 +2,7 @@ server.port: 4443
 server.address: 0.0.0.0
 server.ssl.enabled: false
 
-kms.uris=[\"ws://localhost:8888/kurento\"]
+KMS_URIS=[\"ws://localhost:8888/kurento\"]
 
-openvidu.secret: MY_SECRET
-openvidu.publicurl: local
+OPENVIDU_SECRET: MY_SECRET
+OPENVIDU_PUBLICURL: local
