--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-dotenv.path=.
-
 server.address=0.0.0.0
 server.ssl.enabled=true
 server.port=4443
@@ -11,38 +9,40 @@ server.ssl.key-alias=openvidu-selfsigned
 logging.level.root=info
 spring.main.allow-bean-definition-overriding=true
 
-certificate.type=selfsigned
-kms.uris=["ws://localhost:8888/kurento"]
+DOTENV_PATH=.
 
-openvidu.publicurl=local
-openvidu.secret=MY_SECRET
+CERTIFICATE_TYPE=selfsigned
+KMS_URIS=["ws://localhost:8888/kurento"]
 
-openvidu.cdr=false
-openvidu.cdr.path=log
+OPENVIDU_PUBLICURL=local
+OPENVIDU_SECRET=MY_SECRET
 
-openvidu.webhook=false
-openvidu.webhook.endpoint=
-openvidu.webhook.headers=[]
-openvidu.webhook.events=["sessionCreated","sessionDestroyed","participantJoined","participantLeft","webrtcConnectionCreated","webrtcConnectionDestroyed","recordingStatusChanged","filterEventDispatched","mediaNodeStatusChanged"]
+OPENVIDU_CDR=false
+OPENVIDU_CDR_PATH=log
 
-openvidu.recording=false
-openvidu.recording.version=2.9.0
-openvidu.recording.path=/opt/openvidu/recordings
-openvidu.recording.public-access=false
-openvidu.recording.notification=publisher_moderator
-openvidu.recording.custom-layout=/opt/openvidu/custom-layout
-openvidu.recording.autostop-timeout=120
-openvidu.recording.composed-url=
+OPENVIDU_WEBHOOK=false
+OPENVIDU_WEBHOOK_ENDPOINT=
+OPENVIDU_WEBHOOK_HEADERS=[]
+OPENVIDU_WEBHOOK_EVENTS=["sessionCreated","sessionDestroyed","participantJoined","participantLeft","webrtcConnectionCreated","webrtcConnectionDestroyed","recordingStatusChanged","filterEventDispatched","mediaNodeStatusChanged"]
 
-openvidu.streams.video.max-recv-bandwidth=1000
-openvidu.streams.video.min-recv-bandwidth=300
-openvidu.streams.video.max-send-bandwidth=1000
-openvidu.streams.video.min-send-bandwidth=300
+OPENVIDU_RECORDING=false
+OPENVIDU_RECORDING_VERSION=2.9.0
+OPENVIDU_RECORDING_PATH=/opt/openvidu/recordings
+OPENVIDU_RECORDING_PUBLIC_ACCESS=false
+OPENVIDU_RECORDING_NOTIFICATION=publisher_moderator
+OPENVIDU_RECORDING_CUSTOM_LAYOUT=/opt/openvidu/custom-layout
+OPENVIDU_RECORDING_AUTOSTOP_TIMEOUT=120
+OPENVIDU_RECORDING_COMPOSED_URL=
 
-openvidu.sessions.garbage.interval=900
-openvidu.sessions.garbage.threshold=3600
+OPENVIDU_STREAMS_VIDEO_MAX_RECV_BANDWIDTH=1000
+OPENVIDU_STREAMS_VIDEO_MIN_RECV_BANDWIDTH=300
+OPENVIDU_STREAMS_VIDEO_MAX_SEND_BANDWIDTH=1000
+OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 
-coturn.redis.ip=127.0.0.1
-coturn.redis.dbname=0
-coturn.redis.password=turn
-coturn.redis.connect-timeout=30
+OPENVIDU_SESSIONS_GARBAGE_INTERVAL=900
+OPENVIDU_SESSIONS_GARBAGE_THRESHOLD=3600
+
+COTURN_REDIS_IP=127.0.0.1
+COTURN_REDIS_DBNAME=0
+COTURN_REDIS_PASSWORD=turn
+COTURN_REDIS_CONNECT_TIMEOUT=30
