openvidu-server: CDR default containing folder from "log" to "cdr"

--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -103,8 +103,8 @@ OPENVIDU_SESSIONS_GARBAGE_THRESHOLD=3600
 # Values: true | false
 OPENVIDU_CDR=false
 
-# Path where the cdr log file is hosted
-OPENVIDU_CDR_PATH=/opt/openvidu/log
+# Path where the cdr log files are hosted
+OPENVIDU_CDR_PATH=/opt/openvidu/cdr
 
 # Kurento Media Server image
 # --------------------------
