--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -18,7 +18,7 @@ OPENVIDU_PUBLICURL=local
 OPENVIDU_SECRET=MY_SECRET
 
 OPENVIDU_CDR=false
-OPENVIDU_CDR_PATH=cdr
+OPENVIDU_CDR_PATH=/opt/openvidu/cdr
 
 OPENVIDU_WEBHOOK=false
 OPENVIDU_WEBHOOK_ENDPOINT=
