openvidu-server: generic frontend resource handler (usable for CE and PRO)

--- a/openvidu-server/src/dashboard/package.json
+++ b/openvidu-server/src/dashboard/package.json
@@ -43,7 +43,7 @@
     "private": true,
     "scripts": {
         "build": "./node_modules/@angular/cli/bin/ng build --base-href /dashboard/ --output-path ../main/resources/static/dashboard",
-        "build-prod": "./node_modules/@angular/cli/bin/ng build --base-href /dashboard/ --prod --output-path ../main/resources/static/dashboard",
+        "build-prod": "./node_modules/@angular/cli/bin/ng build --prod --base-href /dashboard/ --output-path ../main/resources/static/dashboard",
         "e2e": "ng e2e",
         "lint": "ng lint",
         "ng": "ng",
