--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default-app-without-demos.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default-app-without-demos.conf
@@ -87,6 +87,10 @@ server {
         root /opt/openvidu;
     }
 
+    location /recordings {
+        proxy_pass http://openviduserver;
+    }
+
     location /api {
         proxy_pass http://openviduserver;
     }
@@ -130,7 +134,6 @@ server {
     }
 
     location /inspector {
-        rewrite ^/inspector/(.*)$ /$1 break;
-        proxy_pass http://openviduserver/;
+        proxy_pass http://openviduserver;
     }
 }
