--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default-app.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default-app.conf
@@ -52,6 +52,10 @@ server {
         root /opt/openvidu;
     }
 
+    location /recordings {
+        proxy_pass http://openviduserver;
+    }
+
     location /api {
         proxy_pass http://openviduserver;
     }
