--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
@@ -97,6 +97,10 @@ server {
         root /opt/openvidu;
     }
 
+    location /recordings {
+        proxy_pass http://openviduserver;
+    }
+
     location /api {
         proxy_pass http://openviduserver;
     }
@@ -140,7 +144,6 @@ server {
     }
 
     location /inspector {
-        rewrite ^/inspector/(.*)$ /$1 break;
-        proxy_pass http://openviduserver/;
+        proxy_pass http://openviduserver;
     }
 }
