changed recording config in .env file

--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -26,6 +26,9 @@ CERTIFICATE_TYPE=selfsigned
 # If CERTIFICATE_TYPE=letsencrypt, you need to configure a valid email for notifications
 LETSENCRYPT_EMAIL=user@example.com
 
+# Whether to enable recording module or not
+OPENVIDU_RECORDING=false
+
 # Openvidu Folder Record used for save the openvidu recording videos. Change it
 # with the folder you want to use from your host.
 OPENVIDU_RECORDING_PATH=/opt/openvidu/recordings
