"OpenVidu Server Webhook" to "OpenVidu Webhook"

--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -74,7 +74,7 @@ OPENVIDU_STREAMS_VIDEO_MAX_SEND_BANDWIDTH=1000
 # 0 means unconstrained
 OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 
-# true to enable OpenVidu Server Webhook service. false' otherwise
+# true to enable OpenVidu Webhook service. false' otherwise
 # Values: true | false
 OPENVIDU_WEBHOOK=false
 
@@ -82,10 +82,10 @@ OPENVIDU_WEBHOOK=false
 # Must be a valid URL: http(s)://ENDPOINT
 #OPENVIDU_WEBHOOK_ENDPOINT=
 
-# List of headers that OpenVidu Server Webhook service will attach to HTTP POST messages
+# List of headers that OpenVidu Webhook service will attach to HTTP POST messages
 #OPENVIDU_WEBHOOK_HEADERS=
 
-# List of events that will be sent by OpenVidu Server Webhook service
+# List of events that will be sent by OpenVidu Webhook service
 # Leave blank if all events.
 OPENVIDU_WEBHOOK_EVENTS=[sessionCreated,sessionDestroyed,participantJoined,participantLeft,webrtcConnectionCreated,webrtcConnectionDestroyed,recordingStatusChanged,filterEventDispatched,mediaNodeStatusChanged]
 
