--- a/openvidu-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/openvidu-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -85,7 +85,7 @@
 		{
 			"name": "OPENVIDU_WEBHOOK",
 			"type": "java.lang.Boolean",
-			"description": "'true' to enable OpenVidu Server Webhook service. 'false' otherwise",
+			"description": "'true' to enable OpenVidu Webhook service. 'false' otherwise",
 			"defaultValue": false
 		},
 		{
@@ -97,13 +97,13 @@
 		{
 			"name": "OPENVIDU_WEBHOOK_HEADERS",
 			"type": "java.lang.String",
-			"description": "List of headers that OpenVidu Server Webhook service will attach to HTTP POST messages",
+			"description": "List of headers that OpenVidu Webhook service will attach to HTTP POST messages",
 			"defaultValue": "[]"
 		},
 		{
 			"name": "OPENVIDU_WEBHOOK_EVENTS",
 			"type": "java.lang.String",
-			"description": "List of events that will be sent by OpenVidu Server Webhook service",
+			"description": "List of events that will be sent by OpenVidu Webhook service",
 			"defaultValue": "[\"sessionCreated\",\"sessionDestroyed\",\"participantJoined\",\"participantLeft\",\"webrtcConnectionCreated\",\"webrtcConnectionDestroyed\",\"recordingStatusChanged\"]"
 		},
 		{
